--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+#cloud_twilio:
+#    resource: "@CloudTwilioBundle/Resources/config/routing.yml"
+#    prefix:   /
+
 app:
     resource: "@AppBundle/Controller/"
     type:     annotation
